documentation for the Restful-API is done. Some Joi-validation has been done for different types of data. The first middleware for timestampCreation has been added and is working properly
