# backend/src/swagger/swagger.yaml
@@ -44,7 +44,8 @@ paths:
                   message:
                     type: string
                     example: Welcome to the user Endpoint.
-  /user/tips:
+
+  /users/tips:
     get:
       tags:
         - tips
@@ -73,7 +74,7 @@ paths:
                       type: string
                       description: Description of the current alert/tip
 
-  /user/tips/postTip:
+  /users/tips/postTip:
     post:
       tags:
         - tips
@@ -122,7 +123,7 @@ paths:
                       description:
                         type: string
 
-  /user/tips/putTip/{id}:
+  /users/tips/putTip/{id}:
     put:
       tags:
         - tips
@@ -180,17 +181,18 @@ paths:
                         user:
                           type: string
 
-  /user/tips/deleteTip/{id}:
+  /users/tips/deleteTip/{id}:
     delete:
       tags: 
         - tips
       summary: Delete a tip
-      perameters:
+      parameters:
         - in: path
           name: id
           required: true
           schema:
-            type:
+            type: integer
+          description: ID of the tip to delete
       responses:
         "200":
           description: Tip deleted
@@ -209,7 +211,7 @@ paths:
         "500":
           description: Internal server error
 
-  /user/risks:
+  /users/risks:
     get:
       tags:
         - User Risks
@@ -250,7 +252,8 @@ paths:
                   message:
                     type: string
                     example: SERVER SERVER ERROR
-  /user/safety:
+
+  /users/safety:
     get:
       tags:
         - User Safety
@@ -310,6 +313,7 @@ paths:
                 properties:
                   message:
                     type: string
+
   /admins/:
     get:
       tags:  
@@ -531,12 +535,9 @@ paths:
             schema:
               type: object
               properties:
-                timestamp:
-                  type: string
                 problem:
                   type: string
               required:
-                - timestamp
                 - problem
       responses:
         "201":
