# backend/src/validators/infrastructureValidation.ts
@@ -1,0 +1,14 @@
+import Joi from "joi";
+import { infrastructureBody } from "types/types";
+
+const infrastructureIssueSchema = Joi.object({
+  id: Joi.number().required(),
+  timestamp: Joi.string().required(),
+  problem: Joi.string().min(10).max(100).required(),
+}).options({ abortEarly: false });
+
+export async function validateInfrastructureIssue(
+  infrastructureIssue: infrastructureBody
+) {
+  return await infrastructureIssueSchema.validateAsync(infrastructureIssue);
+}
